src/test/run-pass/unique-decl.rs
fn main() {
    let _: ~int;
}

fn f(i: ~int) -> ~int {
    fail;
}
