src/test/compile-fail/fn-bad-block-type.rs
// error-pattern:mismatched types

fn f() -> int { true }

fn main() { }
